--- a/coc-settings.json
+++ b/coc-settings.json
@@ -13,5 +13,6 @@
   ],
   "prettier.semi": false,
   "python.jediPath": "/Users/rodrigonascimento/Library/Python/3.8/lib/python/site-packages",
-  "python.linting.flake8Enabled": true
+  "python.linting.flake8Enabled": true,
+  "git.enableGutters": true
 }
