--- a/coc-settings.json
+++ b/coc-settings.json
@@ -11,8 +11,40 @@
     "css",
     "php"
   ],
+  "snippets.userSnippetsDirectory": "~/.config/nvim/plugged/vim-snippets/snippets/",
+  "intelephense.diagnostics.undefinedFunctions": false,
   "prettier.semi": false,
   "python.jediPath": "/Users/rodrigonascimento/Library/Python/3.8/lib/python/site-packages",
   "python.linting.flake8Enabled": true,
-  "git.enableGutters": true
+  "git.enableGutters": true,
+  "diagnostic.errorSign": "✘",
+  "diagnostic.warningSign": "",
+  "diagnostic.infoSign": "",
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\ue624",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
+  }
 }
